more edits on Home page

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 							<h1>Rafael Cruz</h1>
 							<h3>I am a recent Web Development Bootcamp Graduate looking for exciting opportunities in the tech world. Have a look around and reach out! </h3>
 							<br>
-							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. After graduating, opportunities arised in the government and non-profit sector. After a few years in the non-prfit sector I decided to pursue a career in tech. I completed the LaunchCode Web Dev program on October 2022.</p>
+							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. After graduating, opportunities arised in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I completed the LaunchCode Web Dev program on October 2022.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
 							</ul>
@@ -48,7 +48,7 @@
 									<h2>RecipeBox - React</h2>
 									<p>React application that renders recipes from the Spoonacular API. You can search for recipes and also get some random recipes in case you are feeling lucky!</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/Rafycruz23" class="button">Check Code on GitHub</a></li>
 									</ul>
 								</div>
 							</div>
@@ -60,7 +60,7 @@
 									<h2>METAR app - React</h2>
 									<p>For aviation enthusiasts! This application show the current METAR information for US airports. Need to know the local weather of your airport? Search it here?</p>
 									<ul class="actions">
-										<li><a href="generic.html" class="button">Learn more</a></li>
+										<li><a href="https://github.com/Rafycruz23" class="button">Check Code on GitHub</a></li>
 									</ul>
 								</div>
 							</div>
@@ -101,9 +101,6 @@
 									<span></span>
 								</section>
 							</div>
-							<ul class="actions">
-								<li><a href="generic.html" class="button">Learn more</a></li>
-							</ul>
 						</div>
 					</section>
 
