ready for soft publish

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
 							<li><a href="#one">Projects</a></li>
-							<li><a href="#two">Who Am I</a></li>
+							<li><a href="#two">About Me</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -42,7 +42,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="https://github.com/Rafycruz23" class="image"><img src="images/recipeBoximg.jpeg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>RecipeBox - React</h2>
@@ -54,11 +54,11 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+							<a href="https://github.com/Rafycruz23" class="image"><img src="images/MetarApp.jpeg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>METAR app - React</h2>
-									<p>For aviation enthusiasts! This application show the current METAR information for US airports. Need to know the local weather of your airport? Search it here?</p>
+									<p>For aviation enthusiasts! This application renders the current METAR information for US airports. Need to know the local weather of your airport? Search it here!</p>
 									<ul class="actions">
 										<li><a href="https://github.com/Rafycruz23" class="button">Check Code on GitHub</a></li>
 									</ul>
@@ -98,7 +98,7 @@
 									<p>Holder of a Private Pilot License and Drone Operator</p>
 								</section>
 								<section>
-									<span></span>
+									<!-- <span></span> -->
 								</section>
 							</div>
 						</div>
@@ -144,7 +144,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Untitled. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
