added js for download resume

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<br>
 							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. After graduating, opportunities arised in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I completed the LaunchCode Web Dev program on October 2022.</p>
 							<ul class="actions">
-								<li><a href="#one" class="button scrolly">Learn more</a></li>
+								<li><a onclick="downloadFile('RCresume.pdf')" href="#one" class="button scrolly">Download Resume</a></li>
 							</ul>
 						</div>
 					</section>
