--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<br>
 							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. After graduating, opportunities arised in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I completed the LaunchCode Web Dev program on October 2022.</p>
 							<ul class="actions">
-								<li><a onclick="downloadFile('RCresume.pdf')" href="#one" class="button scrolly">Download Resume</a></li>
+								<li><a onclick="downloadFile('RafaelCruzLC101.pdf')" href="#" class="button scrolly">Download Resume</a></li>
 							</ul>
 						</div>
 					</section>
@@ -157,6 +157,7 @@
 			<script src="assets/js/breakpoints.min.js"></script>
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
+			<script src="assets/js/downloadResume.js"></script>
 
 	</body>
 </html>
