--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 	<head>
-		<title>Rafael Cruz Portfolio</title>
+		<title>Rafael Cruz GitHub</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -32,9 +32,9 @@
 							<h1>Rafael Cruz</h1>
 							<h3>I am a recent Web Development Bootcamp Graduate looking for exciting opportunities in the tech world. Have a look around and reach out! </h3>
 							<br>
-							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. After graduating, opportunities arised in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I completed the LaunchCode Web Dev program on October 2022.</p>
+							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. Soon after graduating, opportunities arose in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I recently completed LaunchCode's Web Development program on October 2022.</p>
 							<ul class="actions">
-								<li><a onclick="downloadFile('RafaelCruzLC101.pdf')" href="#" class="button scrolly">Download Resume</a></li>
+								<li><a onclick="downloadFile('RafaelCruzLC101.pdf')" href="" class="button scrolly">Download Resume</a></li>
 							</ul>
 						</div>
 					</section>
