added new resume and updated info

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 							<br>
 							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. Soon after graduating, opportunities arose in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I recently completed LaunchCode's Web Development program on October 2022.</p>
 							<ul class="actions">
-								<li><a onclick="downloadFile('RafaelCruzLC101.pdf')" href="" class="button scrolly">Download Resume</a></li>
+								<li><a onclick="downloadFile('RafaelCRUZ.pdf')" href="" class="button scrolly">Download Resume</a></li>
 							</ul>
 						</div>
 					</section>
