--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li>
+						<li>&copy; Rafael Cruz Github Page. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
