added video project

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 								</div>
 							</div>
 						</section>
-						<section>
+						<section >
 							<a href="https://github.com/Rafycruz23" class="image"><img src="images/MetarApp.jpeg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
@@ -66,6 +66,14 @@
 							</div>
 						</section>
 					</section>
+						<section id="one" wrapper style1 major">
+								<video 
+									width=100%
+									height=auto 
+									autoplay
+									src="videos/Project1 Networking.mp4" >
+								</video>
+							</section>
 
 				<!-- Two --> 
 					<section id="two" class="wrapper style3 fade-up">
