updated profile info

--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
 							<h1>Rafael Cruz</h1>
 							<h3>I am a recent Web Development Bootcamp Graduate looking for exciting opportunities in the tech world. Have a look around and reach out! </h3>
 							<br>
-							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. Soon after graduating, opportunities arose in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I recently completed LaunchCode's Web Development program on October 2022.</p>
+							<p>Born in Puerto Rico, I moved to the US mainland in 2012 to pursue my education in International Relations / Strategic Intelligence. Soon after graduating, opportunities arose in the government and non-profit sector where I sharpened my administrative, costumer service, and database management skills. After a few years in the non-prfit sector I decided to pursue a career in tech. I recently completed LaunchCode's Web Development program on October 2022.
+
+							Currently enrolled in Community College of Philadelphia's Cybersecurity Bootcamp, and enrolled at IEBS Cybersecurity Masters' Degree starting in October 2024.
+							</p>
 							<ul class="actions">
 								<li><a onclick="downloadFile('RafaelCRUZ.pdf')" href="" class="button scrolly">Download Resume</a></li>
 							</ul>
